--- a/Telas/login.html
+++ b/Telas/login.html
@@ -9,7 +9,7 @@
     <header>
         <div>
             <div class="logo">
-                <img src="LogoDoSafeCircle.png" alt="">
+                <img src="Imagens/LogoDoSafeCircle.png" alt="">
             </div>
             <button type="button">Login</button>
             <button type="button">Cadastrar</button>
@@ -36,9 +36,9 @@
         </div>
     </body>
     <footer>
-        <div>
-
-        </div>
+        <a href="https://x.com/"><img src="Imagens/X.png"></a>
+        <a href="https://www.facebook.com/"><img src="Imagens/logoFacebook.png"></a>
+        <a href="https://www.instagram.com/"><img src="Imagens/insta.png"></a>
     </footer>
 </body>
 </html>
