--- a/Telas/cadastrar.html
+++ b/Telas/cadastrar.html
@@ -20,36 +20,36 @@
             <h2>Seja bem vindo!</h2>
             <h3>Crie em sua conta</h3>
             <div>
-                <Label>Nome Completo</Label><br>
-                <input type="text" name="nomeCompleto" placeholder="Nome Completo" required>
-            </div>
-            <div>
-                <Label>Data Nascimento</Label><br>
-                <input type="datetime" name="nascimento" placeholder="Data de Nascimento" required>
-            </div>
-            <div>
-                <Label>Email</Label><br>
-                <input type="text" name="email" placeholder="Email" required>
-            </div>
-            <div>
-                <Label>Telefone</Label><br>
-                <input type="number" name="telefone" placeholder="Telefone" required>
-            </div>
-            <div>
-                <Label>CPF</Label><br>
-                <input type="number" name="cpf" placeholder="CPF" required>
-            </div>
-            <div>
-                <Label>RG</Label><br>
-                <input type="number" name="rg" placeholder="RG" required>
-            </div>
-            <div>
-                <button type="submit">Login</button>
-            </div>
-            <div>
-                <a href="">Ajuda & Suporte</a>
-            </div>
-        </div>
+        <form action="/cadastrar" method="POST" enctype="multipart/form-data">
+        <label>Nome Completo</label><br>
+        <input type="text" name="nome" required><br>
+
+        <label>Data Nascimento</label><br>
+        <input type="date" name="nascimento" required><br>
+
+        <label>Email</label><br>
+        <input type="email" name="email" required><br>
+
+        <label>Senha</label><br>
+        <input type="password" name="senha" required><br>
+
+        <label>Telefone</label><br>
+        <input type="text" name="telefone" required><br>
+
+        <label>CPF</label><br>
+        <input type="text" name="cpf" required><br>
+
+        <label>RG</label><br>
+        <input type="text" name="rg" required><br>
+
+        <label>Foto da Identidade (Frente)</label><br>
+        <input type="file" name="ind_front" required><br>
+
+        <label>Foto da Identidade (Verso)</label><br>
+        <input type="file" name="ind_back" required><br><br>
+
+        <button type="submit">Cadastrar</button>
+    </form>
     </body>
     <footer>
 
