--- a/Telas/reportarOcorrencia.html
+++ b/Telas/reportarOcorrencia.html
@@ -10,23 +10,22 @@
     <hr>
 </header>
 <body>
-    <div>
+    <form action="/ocorrencia" method="POST">
         <div>
-            <label for="">Qual seria a Ocorrência?</label><br>
-            <input type="text" placeholder="" id="ocorrencia" disabled>
+            <label>Qual seria a Ocorrência?</label><br>
+            <input type="text" name="ocorrencia" placeholder="Ex: Vazamento" required>
         </div>
         <div>
-            <label for="">Localização</label><br>
-            <input type="text" placeholder="" id="localizacao" disabled>
+            <label>Localização</label><br>
+            <input type="text" name="localizacao" placeholder="Ex: Corredor 2" required>
         </div>
         <div>
-            <label for="">Descrição da Ocorrência</label><br>
-            <textarea name="" id=""></textarea>
+            <label>Descrição da Ocorrência</label><br>
+            <textarea name="descricao" placeholder="Descreva a situação..." required></textarea>
         </div>
         <div>
             <button type="submit">Enviar</button>
         </div>
-        
-    </div>
+    </form>
 </body>
 </html>
