--- a/Telas/cadastrar.html
+++ b/Telas/cadastrar.html
@@ -114,10 +114,30 @@
     }
 
     footer {
-      text-align: center;
-      font-size: 12px;
-      color: #777;
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+    }
+
+    footer img {
+      width: 24px;
+      height: 24px;
+    }
+    
+    .cadastro {
+      display: flex;
+      justify-content: center;
       margin-top: 10px;
+    }
+
+    .cadastro button {
+      background-color: #e74c3c;
+      border: none;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
     }
 
     @media screen and (max-width: 400px) {
@@ -136,7 +156,7 @@
   <div class="container">
     <header>
       <div class="logo">
-        <img src="LogoDoSafeCircle.png" alt="Logo do SafeCircle">
+        <img src="Imagens/LogoDoSafeCircle.png" alt="Logo do SafeCircle">
       </div>
       <div class="cadastroOuLogin">
         <button type="button">Login</button>
@@ -193,13 +213,16 @@
           <input type="file" name="ind_back" required>
         </div>
 
-        <button type="submit">Cadastrar</button>
+        <div class="cadastro">
+          <button type="submit">Cadastrar</button>
+        </div>
       </form>
     </main>
 
     <footer>
-      © SafeCircle 2025
-    </footer>
+      <a href="https://x.com/"><img src="Imagens/X.png" alt="Twitter"></a>
+      <a href="https://www.facebook.com/"><img src="Imagens/logoFacebook.png" alt="Facebook"></a>
+      <a href="https://www.instagram.com/"><img src="Imagens/insta.png" alt="Instagram"></a>    </footer>
   </div>
 </body>
 </html>
