--- a/Telas/telaPrincipal.html
+++ b/Telas/telaPrincipal.html
@@ -5,31 +5,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SafeCircle - Mapa Responsivo</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 20px;
+    <style>
+    * {
       margin: 0;
-      max-width: 480px;
-      margin: auto;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+      display: grid;
+      place-items: center;
+      min-height: 100vh;
+    }
+
+    .container {
+      width: 90%;
+      max-width: 400px;
+      background-color: #fff;
+      border-radius: 16px;
+      padding: 20px;
+      display: grid;
+      gap: 20px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    header {
+      text-align: center;
+      color: #dc3545;
+    }
+
+    header h3 {
+      margin-bottom: 8px;
     }
 
     #map {
       width: 100%;
-      height: 40vh;
-      border-radius: 10px;
-      margin-bottom: 20px;
+      height: 60vh;
+      border-radius: 12px;
+      border: 1px solid #ccc;
     }
 
     .botao {
       background-color: #dc3545;
       color: white;
-      padding: 12px;
+      padding: 14px;
       border: none;
-      border-radius: 8px;
-      font-size: 18px;
+      border-radius: 10px;
+      font-size: 16px;
+      font-weight: bold;
       width: 100%;
-      margin: 20px 0;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .botao:hover {
+      background-color: #c82333;
     }
 
     textarea {
@@ -39,6 +71,18 @@
       padding: 10px;
       border: 1px solid #ccc;
       resize: none;
+      font-size: 14px;
+    }
+
+    @media screen and (max-width: 400px) {
+      .container {
+        padding: 16px;
+      }
+
+      .botao {
+        font-size: 14px;
+        padding: 12px;
+      }
     }
   </style>
 </head>
