--- a/Telas/login.html
+++ b/Telas/login.html
@@ -160,7 +160,7 @@
       </div>
       <div class="cadastroOuLogin">
         <button type="button">Login</button>
-        <button type="button">Cadastrar</button>
+        <a href="/cadastro"><button type="button">Cadastrar</button></a>
       </div>
     </header>
 
