--- a/Telas/cadastrar.html
+++ b/Telas/cadastrar.html
@@ -159,7 +159,7 @@
         <img src="Imagens/LogoDoSafeCircle.png" alt="Logo do SafeCircle">
       </div>
       <div class="cadastroOuLogin">
-        <a href="/login"><button type="button">Login</button></a>
+        <a href="/templates/login.html"><button type="button">Login</button></a>
         <button type="button">Cadastrar</button>
       </div>
     </header>
