--- a/Telas/login.html
+++ b/Telas/login.html
@@ -160,7 +160,7 @@
       </div>
       <div class="cadastroOuLogin">
         <button type="button">Login</button>
-        <a href="/cadastro"><button type="button">Cadastrar</button></a>
+        <a href="/templates/cadastro.html"><button type="button">Cadastrar</button></a>
       </div>
     </header>
 
