--- a/Telas/telaPrincipal.html
+++ b/Telas/telaPrincipal.html
@@ -95,7 +95,7 @@
 
   <div id="map"></div>
 
-  <button class="botao">EMERGÊNCIA</button>
+  <button class="botao" onclick="window.location.href='/ocorrencia'">EMERGÊNCIA</button>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
